"""Initial migration

Revision ID: f8b45a58a152
Revises: 
Create Date: 2026-03-21 20:19:45.747680

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'f8b45a58a152'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('phone_number', sa.String(length=20), nullable=False, comment='Номер телефона в международном формате (например, +79001234567)'),
    sa.Column('phone_number_verified', sa.Boolean(), nullable=False, comment='Подтвержден ли номер телефона'),
    sa.Column('username', sa.String(length=50), nullable=False, comment='Уникальное имя пользователя (может быть не задано)'),
    sa.Column('full_name', sa.String(length=100), nullable=True, comment='Полное имя пользователя'),
    sa.Column('bio', sa.String(length=500), nullable=True, comment='Биография или описание профиля.'),
    sa.Column('hashed_password', sa.String(length=255), nullable=True, comment='Хеш пароля (Argon2). Может быть null для OAuth/SSO'),
    sa.Column('status', sa.Enum('ACTIVE', 'INACTIVE', 'BLOCKED', 'WAITING_VERIFICATION', name='userstatus'), nullable=False, comment='Текущий статус учетной записи'),
    sa.Column('is_online', sa.Boolean(), nullable=False, comment='Флаг онлайн/офлайн'),
    sa.Column('last_seen_at', sa.DateTime(timezone=True), nullable=True, comment='Последнее время активности.'),
    sa.Column('public_key', sa.Text(), nullable=True, comment='Публичный ключ пользователя для E2EE (в формате PEM'),
    sa.Column('e2ee_salt', sa.String(length=64), nullable=True, comment='Соли для производных ключей (hex'),
    sa.Column('signed_pre_key', sa.Text(), nullable=True, comment='Подписанный предварительный ключ для E2EE'),
    sa.Column('push_token_update_at', sa.DateTime(timezone=True), nullable=True, comment='Время последнего обновления токена push-уведомлений'),
    sa.Column('language_code', sa.String(length=10), nullable=False, comment='Код языка пользователя'),
    sa.Column('theme', sa.String(length=20), nullable=False, comment='Тема оформления (light/dark/system)'),
    sa.Column('notifications_enabled', sa.Boolean(), nullable=False, comment='Включены ли уведомления'),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False, comment='Дата и время создания записи'),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False, comment='Дата и время последнего обновления'),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True, comment='Дата и время удаления (если не NULL - запись считается удаленной)'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_users_deleted_at'), 'users', ['deleted_at'], unique=False)
    op.create_index(op.f('ix_users_id'), 'users', ['id'], unique=False)
    op.create_index(op.f('ix_users_phone_number'), 'users', ['phone_number'], unique=True)
    op.create_index(op.f('ix_users_username'), 'users', ['username'], unique=True)
    op.create_table('chats',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('chat_type', sa.Enum('PRIVATE', 'GROUP', 'CHANNEL', name='chattype'), nullable=False, comment='Тип чата'),
    sa.Column('title', sa.String(length=500), nullable=True, comment='Описание чата (для групп и каналов)'),
    sa.Column('avatar_url', sa.String(length=500), nullable=True, comment='URL аватара чата'),
    sa.Column('created_by_id', sa.Integer(), nullable=False, comment='ID пользователя, создавшего чат'),
    sa.Column('encryption_key', sa.Text(), nullable=True, comment='Зашифрованный ключ группы (для групповых чатов)'),
    sa.Column('encryption_salt', sa.String(length=64), nullable=True, comment='Соль для производных ключей группы'),
    sa.Column('is_public', sa.Boolean(), nullable=False, comment='Публичный ли чат (можно найти через поиск)'),
    sa.Column('join_link', sa.String(length=255), nullable=True, comment='Ссылка-приглашение в чат'),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False, comment='Дата и время создания записи'),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False, comment='Дата и время последнего обновления'),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True, comment='Дата и время удаления (если не NULL - запись считается удаленной)'),
    sa.ForeignKeyConstraint(['created_by_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('join_link')
    )
    op.create_index(op.f('ix_chats_deleted_at'), 'chats', ['deleted_at'], unique=False)
    op.create_index(op.f('ix_chats_id'), 'chats', ['id'], unique=False)
    op.create_table('chat_participants',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('chat_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('role', sa.Enum('OWNER', 'ADMIN', 'MEMBER', 'BANNED', name='participantrole'), nullable=False, comment='Роль участника'),
    sa.Column('joined_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False, comment='Время присоединения к чату'),
    sa.Column('last_read_message_id', sa.Integer(), nullable=True, comment='ID последнего прочитанного сообщения'),
    sa.Column('muted_until', sa.DateTime(timezone=True), nullable=True, comment='До какого времени отключены уведомления (NULL = не отключены)'),
    sa.Column('group_key_encrypted', sa.Text(), nullable=True, comment='Ключ группы, зашифрованный публичным ключом пользователя'),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False, comment='Дата и время создания записи'),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False, comment='Дата и время последнего обновления'),
    sa.ForeignKeyConstraint(['chat_id'], ['chats.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('chat_id', 'user_id', name='uix_chat_participant')
    )
    op.create_table('messages',
    sa.Column('id', sa.BigInteger(), nullable=False),
    sa.Column('chat_id', sa.Integer(), nullable=False),
    sa.Column('sender_id', sa.Integer(), nullable=True),
    sa.Column('message_type', sa.Enum('SENT', 'DELIVERED', 'READ', 'FAILED', name='messagestatus'), nullable=False),
    sa.Column('status', sa.Enum('SENT', 'DELIVERED', 'READ', 'FAILED', name='messagestatus'), nullable=False),
    sa.Column('encrypted_content', sa.Text(), nullable=True, comment='Зашифрованное содержимое сообщения (base64)'),
    sa.Column('content_nonce', sa.String(length=64), nullable=True, comment='Nonce/IV для расшифровки (base64)'),
    sa.Column('media_url', sa.String(length=500), nullable=True, comment='URL медиафайла (сам файл тоже зашифрован)'),
    sa.Column('media_encrypted_key', sa.Text(), nullable=True, comment='Ключ для расшифровки медиа, зашифрованный публичным ключом получателя'),
    sa.Column('media_iv', sa.String(length=64), nullable=True, comment='Nonce для расшифровки медиа'),
    sa.Column('media_size', sa.Integer(), nullable=True, comment='Размер медиафайла в байтах'),
    sa.Column('media_mime_type', sa.String(length=100), nullable=True, comment='MIME тип медиафайла'),
    sa.Column('meta', sa.JSON(), nullable=True, comment='Публичные метаданные (не шифруются)'),
    sa.Column('service_action', sa.String(length=50), nullable=True, comment='Тип служебного действия'),
    sa.Column('reply_to_id', sa.BigInteger(), nullable=True, comment='ID сообщения, на которое отвечаем'),
    sa.Column('forwarded_from_id', sa.BigInteger(), nullable=True, comment='ID оригинального сообщения (если переслано)'),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False, comment='Дата и время создания записи'),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False, comment='Дата и время последнего обновления'),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True, comment='Дата и время удаления (если не NULL - запись считается удаленной)'),
    sa.ForeignKeyConstraint(['chat_id'], ['chats.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['reply_to_id'], ['messages.id'], ),
    sa.ForeignKeyConstraint(['sender_id'], ['users.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('ix_messages_chat_created', 'messages', ['chat_id', 'created_at'], unique=False)
    op.create_index(op.f('ix_messages_chat_id'), 'messages', ['chat_id'], unique=False)
    op.create_index(op.f('ix_messages_deleted_at'), 'messages', ['deleted_at'], unique=False)
    op.create_index(op.f('ix_messages_sender_id'), 'messages', ['sender_id'], unique=False)
    op.create_index('ix_messages_sender_status', 'messages', ['sender_id', 'status'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('ix_messages_sender_status', table_name='messages')
    op.drop_index(op.f('ix_messages_sender_id'), table_name='messages')
    op.drop_index(op.f('ix_messages_deleted_at'), table_name='messages')
    op.drop_index(op.f('ix_messages_chat_id'), table_name='messages')
    op.drop_index('ix_messages_chat_created', table_name='messages')
    op.drop_table('messages')
    op.drop_table('chat_participants')
    op.drop_index(op.f('ix_chats_id'), table_name='chats')
    op.drop_index(op.f('ix_chats_deleted_at'), table_name='chats')
    op.drop_table('chats')
    op.drop_index(op.f('ix_users_username'), table_name='users')
    op.drop_index(op.f('ix_users_phone_number'), table_name='users')
    op.drop_index(op.f('ix_users_id'), table_name='users')
    op.drop_index(op.f('ix_users_deleted_at'), table_name='users')
    op.drop_table('users')
    # ### end Alembic commands ###
